WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294632
AX: WebKit doesn't traverse `InlineIterator::TextBox`s in logical order when building accessibility text runs, causing assistive technologies to output incorrect text for LTR-RTL mixed content
https://bugs.webkit.org/show_bug.cgi?id=294632
Summary
AX: WebKit doesn't traverse `InlineIterator::TextBox`s in logical order when ...
Tyler Wilcock
Reported
2025-06-17 14:06:11 PDT
Because of this, we do wrong things with mixed-direction sequences of text.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-17 14:08:18 PDT
<
rdar://problem/153673920
>
Tyler Wilcock
Comment 2
2025-07-16 11:31:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48134
EWS
Comment 3
2025-07-16 15:11:02 PDT
Committed
297490@main
(bf58fd66fc92): <
https://commits.webkit.org/297490@main
> Reviewed commits have been landed. Closing PR #48134 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug