AX: Accessibility text runs don't traverse `InlineIterator::TextBox`s in logical order, causing assistive technologies to output incorrect text for LTR-RTL mixed content https://bugs.webkit.org/show_bug.cgi?id=294632 rdar://153673920

Reviewed by Joshua Hoffman.

Traverse in `InlineIterator::TextBox`s in logical order so we output correct text for LTR-RTL mixed direction content.
Fixes accessibility/text-marker/text-marker-bidi-inline-cite.html in ITM.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onAccessibilityPaintFinished):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textRuns):
* Source/WebCore/editing/VisiblePosition.cpp:
(WebCore::VisiblePosition::debugDescription const):
Drive-by change to output affinity in debug description, something I've found useful multiple times.

Canonical link: https://commits.webkit.org/297490@main