Source/WebCore/accessibility/AXObjectCache.cpp
@@ -2104,10 +2104,7 @@ void AXObjectCache::onAccessibilityPaintFinished()
 
     for (auto iterator = m_mostRecentlyPaintedText.begin(); iterator != m_mostRecentlyPaintedText.end(); ++iterator) {
         const auto& renderText = iterator->key;
-        // FIXME: Use InlineIteratorLogicalOrderTraversal instead. Otherwise we'll do the wrong thing for mixed direction
-        // content. We should do this at the same time AccessibilityRenderObject::textRuns switches to this function.
-        // Tracked by: https://bugs.webkit.org/show_bug.cgi?id=294632
-        if (auto textBox = InlineIterator::lineLeftmostTextBoxFor(renderText)) {
+        if (auto textBox = InlineIterator::firstTextBoxInLogicalOrderFor(renderText).first) {
             // The line index from TextBox::lineIndex is relative to the containing block, which count lines from
             // other renderers. The LineRange struct we have built expects the start and end line indices to be
             // relative to just this renderer, so normalize them by getting the first line index for this renderer.
